k8s/recommand-place/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommand-place
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommand-place
  template:
    metadata:
      labels:
        app: recommand-place
    spec:
      containers:
        - name: recommand-place
          image: hyundae.kr.ncr.ntruss.com/ai-services/recommand-place:latest
          ports:
            - containerPort: 8002
