k8s/recommand-place/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommand-place
spec:
  selector:
    app: recommand-place
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
